cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: testing
  annotations:
      kubernetes.io/change-cause: volvemos a 1 replica
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: nginx:alpine
        resources:
          requests:
            memory: "20Mi"
            cpu: "50m"
          limits:
            memory: "25Mi"
            cpu: "60m"
        ports:
        - containerPort: 80
