cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: produccion
spec:
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
