cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: testing
spec:
  rules:
  - host: "cluster.paganuzzi.com.ar/testing"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-service
            port:
              number: 80
